gitops/clusters/homelab/apps/webtop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webtop
  namespace: webtop
  labels:
    app: webtop
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    targetPort: 3000
    name: http
  - port: 3001
    targetPort: 3001
    name: https
  - port: 2222
    targetPort: 22
    name: ssh
  - port: 3389
    targetPort: 3389
    name: rdp
  selector:
    app: webtop
